# become-a-pro

./: .gitignore  CMakeLists.txt  Makefile  MultiHackCsgo.cbp  MultiHackCsgo.depend  MultiHackCsgo.layout  README.md  become-a-pro.cbp  hack.cpp  main.cpp  settings-example.cfg  settings.cfg  settings.cfg~
include/: hack.h  remote.h  types.h
src/: hack.cpp  remote.cpp
